fixing scrollbar jumping and footer to the bototm

--- a/src/styles/base/_base.sass
+++ b/src/styles/base/_base.sass
@@ -3,12 +3,18 @@
   
 html
   font-size: 62.5% // rem to 10 base system, that is 1rem = 10px
-  
+  height: 100%
+  position: relative
+
 body
   color: $dark-gray
   font-family: Helvetica, Arial, sans-serif
   font-size: $m-size
   line-height: 1.6
+  overflow-y: scroll
+  overflow-x: hidden
+  height: 100%
+  position: relative
 
 button
   cursor: pointer
