--- a/src/styles/components/_content-container.sass
+++ b/src/styles/components/_content-container.sass
@@ -5,6 +5,7 @@
 
 .content-div
   display: flex
-  height: 100vh
-  justify-content: space-between
   flex-direction: column
+  min-height: 100vh
+  padding-bottom: 8rem
+  position: relative
