--- a/src/styles/components/_footer.sass
+++ b/src/styles/components/_footer.sass
@@ -1,6 +1,8 @@
 .footer
   background: $dark-blue
-  margin-top: 3.5rem
+  position: absolute
+  bottom: 0
+  width: 100%
 
 .footer__content
   align-items: center
